samples/_failures_safe/1761549457_f846ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a5abb9c.c: In function ‘handle_event’:
./samples/SAFE/__tmp_7a5abb9c.c:153:20: error: missing terminating " character
  153 |             printf("Error occurred: code %
      |                    ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7a5abb9c.c:153:13: error: expected expression at end of input
  153 |             printf("Error occurred: code %
      |             ^~~~~~
./samples/SAFE/__tmp_7a5abb9c.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7a5abb9c.c:153:13: error: expected declaration or statement at end of input
